crates/analyzer/tests/snapshots/analysis__revert.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ revert.fe:2:5
  │
2 │     pub msg: u256
  │     ^^^^^^^^^^^^^ u256
3 │     pub val: bool
  │     ^^^^^^^^^^^^^ bool

note: 
  ┌─ revert.fe:6:5
  │
6 │     my_other_error: OtherError
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError

note: 
  ┌─ revert.fe:8:5
  │  
8 │ ╭     pub fn bar() -> u256:
9 │ │         revert
  │ ╰──────────────^ attributes hash: 17979516652885443340
  │  
  = FunctionSignature {
        self_decl: None,
        params: [],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
   ┌─ revert.fe:11:5
   │  
11 │ ╭     pub fn revert_custom_error():
12 │ │         std::revert_insufficient_funds()
   │ ╰────────────────────────────────────────^ attributes hash: 15148455653558261645
   │  
   = FunctionSignature {
         self_decl: None,
         params: [],
         return_type: Ok(
             Base(
                 Unit,
             ),
         ),
     }

note: 
   ┌─ revert.fe:12:9
   │
12 │         std::revert_insufficient_funds()
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (): Value

note: 
   ┌─ revert.fe:14:5
   │  
14 │ ╭     pub fn revert_other_error():
15 │ │         revert OtherError(msg: 1, val: true)
   │ ╰────────────────────────────────────────────^ attributes hash: 15148455653558261645
   │  
   = FunctionSignature {
         self_decl: None,
         params: [],
         return_type: Ok(
             Base(
                 Unit,
             ),
         ),
     }

note: 
   ┌─ revert.fe:15:32
   │
15 │         revert OtherError(msg: 1, val: true)
   │                                ^       ^^^^ bool: Value
   │                                │        
   │                                u256: Value

note: 
   ┌─ revert.fe:15:16
   │
15 │         revert OtherError(msg: 1, val: true)
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError: Memory

note: 
   ┌─ revert.fe:17:5
   │  
17 │ ╭     pub fn revert_other_error_from_sto(self):
18 │ │         self.my_other_error = OtherError(msg: 1, val: true)
19 │ │         revert self.my_other_error.to_mem()
   │ ╰───────────────────────────────────────────^ attributes hash: 17603814563784536273
   │  
   = FunctionSignature {
         self_decl: Some(
             Mutable,
         ),
         params: [],
         return_type: Ok(
             Base(
                 Unit,
             ),
         ),
     }

note: 
   ┌─ revert.fe:18:9
   │
18 │         self.my_other_error = OtherError(msg: 1, val: true)
   │         ^^^^ Foo: Value

note: 
   ┌─ revert.fe:18:9
   │
18 │         self.my_other_error = OtherError(msg: 1, val: true)
   │         ^^^^^^^^^^^^^^^^^^^                   ^       ^^^^ bool: Value
   │         │                                     │        
   │         │                                     u256: Value
   │         OtherError: Storage { nonce: Some(0) }

note: 
   ┌─ revert.fe:18:31
   │
18 │         self.my_other_error = OtherError(msg: 1, val: true)
   │                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError: Memory
19 │         revert self.my_other_error.to_mem()
   │                ^^^^ Foo: Value

note: 
   ┌─ revert.fe:19:16
   │
19 │         revert self.my_other_error.to_mem()
   │                ^^^^^^^^^^^^^^^^^^^ OtherError: Storage { nonce: Some(0) }

note: 
   ┌─ revert.fe:19:16
   │
19 │         revert self.my_other_error.to_mem()
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError: Storage { nonce: Some(0) } => Memory


